@@ -3,6 +3,7 @@
 var chrome = chrome || {};
 
 chrome.news = [
+	{date: '16 August, 2010', text: 'Pretty URLs 1.0RC2 is released!'},
 	{date: '19 June, 2009', text: 'Pretty URLs 1.0RC is released!'},
 	{date: '6 May, 2009', text: 'Pretty URLs 0.9.3 is released! This fixes a few significant bugs, so it is recommended that you upgrade now! :)'},
 	{date: '25 March, 2009', text: 'Pretty URLs 0.9.2 released'},
@@ -10,6 +11,6 @@ chrome.news = [
 	{date: '12 Nov, 2008', text: 'Pretty URLs 0.9 released'}
 ];
 
-chrome.latestVersion = '1.0RC';
+chrome.latestVersion = '1.0RC2';
 chrome.upgradeFrom = '';
 chrome.upgradeUrl = '';
